<resources>
    <string name="app_name">LandSurvey</string>
    <string name="title_activity_maps">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to this application.</string>
    <string name="location_permission_denied">This application requires location permission to enable the location service. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'LandSurvey\'.</string>
    <string name="permission_required_toast">Location permission is required for this application.</string>

    <!-- tab name of drawer -->
    <string name="mode_automatic">Automatic mode</string>
    <string name="mode_piling">Piling mode</string>
    <string name="mode_manual">Manual mode</string>

    <string name="action_setting">Settings</string>

    <string name="measuring">Measuring</string>

    <string name="gps_is_ready">GPS satellite connection is ready…</string>
    <string name="gps_is_not_ready">Connecting to GPS…</string>
    <string name="area">Area</string>
    <string name="perimeter">Perimeter</string>
    <string name="start_measuring">Start</string>
    <string name="stop_measuring">Stop</string>
    <string name="start_piling">Start Piling</string>
    <string name="stop_piling">Stop Piling</string>
    <string name="start_manual">Start hand</string>
    <string name="stop_manual">Stop hand</string>
    <string name="precision">Precision</string>
    <string name="satellite">Satellite</string>
    <string name="points">Points</string>
    <string name="save">Save</string>
    <string name="history_record">History Record</string>
    <string name="up"><![CDATA[<]]></string>

    <string name="altitude_range">Altitude range</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="delete_point">Delete Point</string>
    <string name="area_unit">Area unit</string>
    <string name="unit_acre">Acre(Default)</string>
    <string name="unit_sqmi">Square mile</string>
    <string name="unit_sqft">Square foot</string>
    <string name="unit_sqm">Square meter</string>
    <string name="unit_sqkm">Square kilometer</string>
    <string name="gps_is_required">For best results, please turn on device location which uses Google\'s location service.</string>
    <string name="open_gps">Turn on location setting</string>
</resources>
