<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:elevation="2dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="45dp"
        android:text="@string/area_unit"
        android:textSize="28sp"
        android:textColor="@color/textColor"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:checkedButton="@id/radio_acre">
        <RadioButton
            android:id="@+id/radio_acre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="60dp"
            android:paddingStart="20dp"
            android:text="@string/unit_acre"
            android:textColor="@color/textColor"
            android:textSize="22sp"/>
        <RadioButton
            android:id="@+id/radio_sqmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="60dp"
            android:paddingStart="20dp"
            android:text="@string/unit_sqmi"
            android:textColor="@color/textColor"
            android:textSize="22sp"/>
        <RadioButton
            android:id="@+id/radio_sqft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="60dp"
            android:paddingStart="20dp"
            android:text="@string/unit_sqft"
            android:textColor="@color/textColor"
            android:textSize="22sp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@android:string/cancel"
            android:layout_weight="1"
            android:background="@drawable/save_dialog_button_background"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="@color/textColor"/>
        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:layout_weight="1"
            android:background="@drawable/save_dialog_button_background"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="@color/defaultButtonColor"/>
    </LinearLayout>
</LinearLayout>
