<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="720dp"
    android:layout_alignParentEnd="true"
    android:elevation="10dp"
    android:outlineProvider="bounds"
    android:layout_marginEnd="-2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".fragments.MainDrawerFragment">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clayout_gps_info"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:background="#0C3FD8B4">

            <View
                android:id="@+id/view_divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="126dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#FFC5C5C5"
                android:clickable="false"/>

            <View
                android:id="@+id/view_divider2"
                android:layout_width="1dp"
                android:layout_height="72dp"
                android:layout_marginRight="119dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#FFC5C5C5"
                android:clickable="false"/>

            <View
                android:id="@+id/view_divider3"
                android:layout_width="1dp"
                android:layout_height="72dp"
                android:layout_marginLeft="119dp"
                android:layout_marginTop="32dp"
                android:background="#FFC5C5C5"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:src="@drawable/satellite"
                app:layout_constraintEnd_toStartOf="@+id/view_divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/satellite" />

            <ImageView
                android:id="@+id/imageView_precision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:src="@drawable/precision"
                app:layout_constraintEnd_toStartOf="@+id/view_divider3"
                app:layout_constraintStart_toEndOf="@+id/view_divider2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:src="@drawable/points"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_divider3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_satellite_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:text="0"
                app:layout_constraintEnd_toStartOf="@+id/view_divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/dinbold"
                android:textSize="24sp"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/textView_precision_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:text="5.0m"
                app:layout_constraintEnd_toStartOf="@+id/view_divider3"
                app:layout_constraintStart_toStartOf="@+id/view_divider2"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/dinbold"
                android:textSize="24sp"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/textView_points_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:fontFamily="@font/dinbold"
                android:text="0"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_divider3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_satellite_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:text="@string/satellite"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/view_divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_precision_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:text="@string/precision"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/view_divider3"
                app:layout_constraintStart_toStartOf="@+id/view_divider2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_points_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:text="@string/points"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_divider3"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <ImageView
            android:id="@+id/imageView_satellite_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:clickable="false"
            android:src="@drawable/satellite_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clayout_gps_info" />

        <TextView
            android:id="@+id/textView_latlng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"

            android:fontFamily="@font/dinbold"
            android:text="28.349840, 107.523492"
            android:textColor="@color/textColor"

            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_satellite_state" />

        <TextView
            android:id="@+id/textView_gps_info"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"

            android:text="@string/gps_is_ready"
            android:textAlignment="center"

            android:textAppearance="@android:style/TextAppearance.Widget.PopupMenu.Small"
            android:textColor="#FF050505"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_latlng" />

        <View
            android:id="@+id/view_divider4"
            android:layout_width="360dp"
            android:layout_height="1dp"

            android:layout_marginTop="50dp"
            android:background="#FFC5C5C5"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_gps_info" />

        <View
            android:id="@+id/view_divider5"
            android:layout_width="360dp"
            android:layout_height="1dp"

            android:layout_marginTop="168dp"
            android:background="#FFC5C5C5"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider4" />

        <View
            android:id="@+id/view_divider6"
            android:layout_width="1dp"
            android:layout_height="122dp"

            android:background="#FFC5C5C5"
            android:clickable="false"
            app:layout_constraintBottom_toTopOf="@+id/view_divider5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider4" />

        <ImageView
            android:id="@+id/imageView_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:src="@drawable/area"
            android:clickable="false"
            app:layout_constraintEnd_toStartOf="@+id/view_divider6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider4" />

        <TextView
            android:id="@+id/textView_area_content"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="87dp"
            android:fontFamily="@font/dinbold"
            android:text="0ac"
            android:textColor="@color/textColor"

            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/view_divider6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider4" />

        <TextView
            android:id="@+id/textView_area_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="122dp"
            android:text="@string/area"
            app:layout_constraintEnd_toStartOf="@+id/view_divider6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider4" />

        <ImageView
            android:id="@+id/imageView_perimeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:src="@drawable/perimeter"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_divider6"
            app:layout_constraintTop_toBottomOf="@+id/view_divider4" />

        <TextView
            android:id="@+id/textView_perimeter_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="87dp"
            android:fontFamily="@font/dinbold"
            android:text="0m"
            android:textColor="@color/textColor"

            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_divider6"
            app:layout_constraintTop_toBottomOf="@+id/view_divider4" />

        <TextView
            android:id="@+id/textView_perimeter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="122dp"
            android:text="@string/perimeter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_divider6"
            app:layout_constraintTop_toBottomOf="@+id/view_divider4" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_show_history"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingStart="-40dp"
            android:paddingTop="-10dp"

            android:paddingEnd="-20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider5"
            fancy:fb_defaultColor="@android:color/transparent"
            fancy:fb_focusColor="@android:color/transparent"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_iconPaddingTop="2dp"
            fancy:fb_iconPosition="left"
            fancy:fb_iconResource="@drawable/history"
            fancy:fb_text="History Record"
            fancy:fb_textColor="@color/textColor"
            fancy:fb_textSize="14sp"
            android:onClick="onButtonClick"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
